관광지 정보 조회 페이지 로딩속도 개선

--- a/src/main/resources/templates/tourinfo/city.html
+++ b/src/main/resources/templates/tourinfo/city.html
@@ -390,7 +390,7 @@
                     </th:block>
                     </tbody>
                 </table>
-                <nav aria-label="page-bar">
+                <nav aria-label="page-bar" class="d-flex justify-content-center mt-4 mb-4">
                     <ul class="pagination">
                         <li class="page-item">
                             <i class="bi bi-chevron-double-left page-link" data-num="0"></i>
