--- a/src/main/resources/templates/review/editreview.html
+++ b/src/main/resources/templates/review/editreview.html
@@ -101,7 +101,7 @@
             <div class="preview-container col-md-7">
                 <div class="add-file">
                     <label for="img-uploader" class="uploader border border-primary rounded-pill">사진 추가</label>
-                    <input type="file" id="img-uploader" accept="image/*" onchange="setPreview()" multiple/>
+                    <input type="file" id="img-uploader" accept=".gif, .jpg, .png" onchange="setPreview()" multiple/>
                 </div>
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
