--- a/src/main/resources/templates/tourinfo/city.html
+++ b/src/main/resources/templates/tourinfo/city.html
@@ -38,6 +38,8 @@
                     $('.search-btn').trigger('click');
                 }
             });
+
+            loadPage();
         })
 
         // 검색 기능 시작
@@ -191,6 +193,75 @@
             })
         }
 
+        function saveSearchInfo(){
+            let searchInfo = {};
+            searchInfo.area = $('input[name=area]').val();
+            searchInfo.type = $('input[name="type"]:checked').val();
+            searchInfo.cat1 = $('input[name="cat1"]:checked').val();
+            searchInfo.cat2 = $('input[name="cat2"]:checked').val();
+            searchInfo.cat3 = $('input[name="cat3"]:checked').val();
+            searchInfo.sigungu = $('input[name="sigungu"]:checked').val();
+            searchInfo.keyword = $('.search-input').val();
+            searchInfo.page =  $('.page-link.active').attr('data-num');
+            sessionStorage.setItem("searchInfo", JSON.stringify(searchInfo));
+        }
+
+        function loadSearchInfo(){
+            let searchInfo = JSON.parse(sessionStorage.getItem("searchInfo"));
+
+            $('.search-input').val(`${searchInfo.keyword}`);
+            $(`input[type="radio"].typeSelect[value="${searchInfo.type}"]`).click();
+            $(`input[type="radio"].catSelect[value="${searchInfo.cat1}"]`).click();
+            $(`input[type="radio"].sigunguSelect[value="${searchInfo.sigungu}"]`).click();
+            setTimeout(function (){
+                $(`input[type="radio"].cat2Select[value="${searchInfo.cat2}"]`).click();
+            },200)
+            setTimeout(function (){
+                $(`input[type="radio"].cat3Select[value="${searchInfo.cat3}"]`).click();
+            },400)
+
+            setTimeout(function (){
+                $.ajax({
+                    url: '/info/api/touritems',
+                    type: 'POST',
+                    contentType: 'application/json; charset=UTF-8',
+                    data: JSON.stringify({
+                        page: searchInfo.page,
+                        cat1: $('input[name=cat1]:checked').val(),
+                        cat2: $('input[name=cat2]:checked').val(),
+                        cat3: $('input[name=cat3]:checked').val(),
+                        areaCode: $('input[name=area]').val(),
+                        sigunguCode: $('input[name=sigungu]:checked').val(),
+                        contentTypeId: $('input[name=type]:checked').val(),
+                        keyword: searchInfo.keyword
+                    }),
+                    success: function (data) {
+                        $("html").scrollTop(0);
+                        $('#touritems').replaceWith(data);
+                    },
+                    error: function (err) {
+                        console.log(err)
+                    }
+                })
+            },600)
+        }
+
+        function loadPage() {
+            window.addEventListener('pageshow', function (event) {
+                if (event.persisted || (window.performance && window.performance.navigation.type == 2)) {
+                    if(sessionStorage.getItem("searchInfo") != null){
+                        // 다른페이지에서 뒤로가기로 돌아왔을 시 세션에 저장된 정보로 기존 위치로 이동
+                        console.log("back");
+                        loadSearchInfo();
+                    }
+                }else {
+                    // 그 외의 방법으로 페이지 접근 시 바로 타겟을 노출, 데이터 로딩
+                    if(sessionStorage.getItem("searchInfo") != null){
+                        sessionStorage.removeItem("searchInfo");
+                    }
+                }
+            });
+        }
     </script>
     <style>
         * {
@@ -360,7 +431,7 @@
                     <th:block th:if="${pageResponse.total > 0}" th:each="touritem : ${pageResponse.dtoList}">
                         <tr>
                             <td rowspan="3" class="touritem-img">
-                                <a th:href="@{/info/content/{contentid}(contentid=${touritem.contentid})}">
+                                <a onclick="saveSearchInfo()" th:href="@{/info/content/{contentid}(contentid=${touritem.contentid})}">
                                     <img class="thumbnail"
                                          th:if="${touritem.firstimage == null || touritem.firstimage.isEmpty()}"
                                          src="../../assets/img/no_img.jpg">
@@ -370,7 +441,7 @@
                                 </a>
                             </td>
                             <td class="touritem-contents">
-                                <a th:href="@{/info/content/{contentid}(contentid=${touritem.contentid})}">
+                                <a onclick="saveSearchInfo()" th:href="@{/info/content/{contentid}(contentid=${touritem.contentid})}">
                                     <h5 th:text="${touritem.title}"></h5>
                                 </a>
                             </td>
@@ -500,7 +571,7 @@
     </div>
 </div>
     <!--footer-->
-    <th:block th:replace="~{fragments/footer}"></th:block>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<th:block th:replace="~{fragments/footer}"></th:block>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
