[수정] 팔로잉리스트 클릭시 유저페이지로 이동

--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -2623,7 +2623,7 @@
                                     <a href="/mypage/${data.toUser}">
                                         <img src="${data.listSfile}" class="profile-list-img rounded-circle me-2 align-self-center">
                                     </a>
-                                    <a href="/mypage/${data.toUser}">
+                                    <a href="/mypage/${data.fromUser}">
                                         <div class="d-flex flex-column flex-start gap-2">
                                             <strong>${data.fromUser}</strong>
                                             <span>${data.listName}</span>
