--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -1025,7 +1025,7 @@
                     }
                 }else {
                     let tempHtml =
-                        '<div class="no-comment-msg d-flex mb-2">아직 등록된 리뷰가 없습니다.</div>';
+                        '<div class="no-comment-msg d-flex mb-2">아직 등록된 댓글이 없습니다.</div>';
                     $('#comment-wrap').append(tempHtml);
                 }
             },
