버튼 이름 수정

--- a/src/main/resources/templates/findPw.html
+++ b/src/main/resources/templates/findPw.html
@@ -87,7 +87,7 @@
 <!--                <div class="text-center small mt-2" id="checkMsg" style="color: red"></div>-->
 
                 <div class="col text-center">
-                    <button class="btn btn-primary btn-md" id="findPwBtn">아이디 찾기</button>
+                    <button class="btn btn-primary btn-md" id="findPwBtn">비밀번호 찾기</button>
                 </div>
 <!--            </form>-->
 
@@ -102,7 +102,6 @@
 
 <script>
     $("#findPwBtn").click(function () {
-        console.log("버튼이 클릭되었습니다.");
         let id = $("#userId").val();
         let email = $("#email").val();
         console.log("ID:", id);
