여행정보 - 뒤로가기 시 페이지, 검색옵션 유지 구현

--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -2077,9 +2077,11 @@
         /* 리뷰 작성 관련 설정 */
         selectBook();
         deleteImg();
+        checkInputLength;
         /*리뷰 북 작성 관련 설정*/
         changeBookTitle();
         checkBookContents();
+
     })
 
     const observer = new IntersectionObserver((entries, observer) => {
@@ -2208,6 +2210,26 @@
                 scrollCheck = false;
             }
         })
+    }
+
+    function checkInputLength(){
+        $("#new-book-title").on("propertychange change paste input", function() {
+            let title = $(this).val();
+            if(title.length > 20) {
+                title = title.substring(0, 20);
+                $("#new-book-title").val(title);
+                alert("제목은 20자까지 입력할 수 있습니다.");
+            }
+        });
+
+        $("#selected-touritem-name").on("propertychange change paste input", function() {
+            let name = $(this).val();
+            if(name.length > 20) {
+                name = name.substring(0, 20);
+                $("#selected-touritem-name").val(name);
+                alert("관광지 이름은 20자까지 입력할 수 있습니다.");
+            }
+        });
     }
 
     function showReview() {
