--- a/src/main/resources/templates/review/review.html
+++ b/src/main/resources/templates/review/review.html
@@ -495,6 +495,8 @@
         selectBook();
         $('.editSwiper').find('.swiper-controller').hide();
         deleteImg();
+
+        checkInputLength();
     });
 
     let createBookFlag = false;
@@ -553,6 +555,57 @@
         $('#selected-touritem-name').val('');
         $('#selected-touritem-name').prop('disabled', true);
         $('#review-contents').val('');
+    }
+
+    function checkInputLength(){
+        $("#new-book-title").on("propertychange change paste input", function() {
+            let title = $(this).val();
+            if(title.length > 20) {
+                title = title.substring(0, 20);
+                $("#new-book-title").val(title);
+                alert("제목은 20자까지 입력할 수 있습니다.");
+            }
+        });
+
+        $("#selected-touritem-name").on("propertychange change paste input", function() {
+            let name = $(this).val();
+            if(name.length > 30) {
+                name = name.substring(0, 30);
+                $("#selected-touritem-name").val(name);
+                alert("관광지 이름은 30자까지 입력할 수 있습니다.");
+            }
+        });
+
+        $("#review-contents").on("propertychange change paste input", function() {
+            let text = $(this).val();
+            if(text.length > 2000) {
+                text = text.substring(0, 2000);
+                $("#review-contents").val(text);
+                alert("리뷰 본문은 2000자까지 입력할 수 있습니다.");
+            }
+        });
+
+        $("#comment-content").on("propertychange change paste input", function() {
+            let comment = $(this).html().replace;
+            comment = comment.replace(/<div>/g,'');
+            comment = comment.replace(/<\/div>/g,'');
+            if(comment.length > 2000) {
+                comment = comment.substring(0, 2000);
+                $("#comment-content").val(comment);
+                alert("댓글은 2000자까지 입력할 수 있습니다.");
+            }
+        });
+
+        $("#edit-comment-content").on("propertychange change paste input", function() {
+            let comment = $(this).html().replace;
+            comment = comment.replace(/<div>/g,'');
+            comment = comment.replace(/<\/div>/g,'');
+            if(comment.length > 2000) {
+                comment = comment.substring(0, 2000);
+                $("#edit-comment-content").val(comment);
+                alert("댓글은 2000자까지 입력할 수 있습니다.");
+            }
+        });
     }
 
     function showSelectList() {
