글자수 제한

--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -2241,7 +2241,7 @@
         });
 
         $("#comment-content").on("propertychange change paste input", function() {
-            let comment = $(this).html().replace;
+            let comment = $(this).html();
             comment = comment.replace(/<div>/g,'');
             comment = comment.replace(/<\/div>/g,'');
             if(comment.length > 2000) {
