--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -2241,9 +2241,9 @@
         });
 
         $("#comment-content").on("propertychange change paste input", function() {
-            let comment = $(this).html();
-            comment = comment.replace(/<div>/g,'');
-            comment = comment.replace(/<\/div>/g,'');
+            let comment = $(this).text();
+            // comment = comment.replace(/<div>/g,'');
+            // comment = comment.replace(/<\/div>/g,'');
             if(comment.length > 2000) {
                 comment = comment.substring(0, 2000);
                 $("#comment-content").val(comment);
@@ -2252,9 +2252,9 @@
         });
 
         $("#edit-comment-content").on("propertychange change paste input", function() {
-            let comment = $(this).html().replace;
-            comment = comment.replace(/<div>/g,'');
-            comment = comment.replace(/<\/div>/g,'');
+            let comment = $(this).text();
+            // comment = comment.replace(/<div>/g,'');
+            // comment = comment.replace(/<\/div>/g,'');
             if(comment.length > 2000) {
                 comment = comment.substring(0, 2000);
                 $("#edit-comment-content").val(comment);
