--- a/src/main/resources/templates/review/review.html
+++ b/src/main/resources/templates/review/review.html
@@ -586,7 +586,9 @@
         });
 
         $("#comment-content").on("propertychange change paste input", function() {
-            let comment = $(this).html().replace;
+            let comment = $(this).text();
+            // comment = comment.replace(/<div>/g,'');
+            // comment = comment.replace(/<\/div>/g,'');
             if(comment.length > 2000) {
                 comment = comment.substring(0, 2000);
                 $("#comment-content").val(comment);
@@ -595,9 +597,9 @@
         });
 
         $("#edit-comment-content").on("propertychange change paste input", function() {
-            let comment = $(this).html();
-            comment = comment.replace(/<div>/g,'');
-            comment = comment.replace(/<\/div>/g,'');
+            let comment = $(this).text();
+            // comment = comment.replace(/<div>/g,'');
+            // comment = comment.replace(/<\/div>/g,'');
             if(comment.length > 2000) {
                 comment = comment.substring(0, 2000);
                 $("#edit-comment-content").val(comment);
